force-app/main/default/objects/Cricketer__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <defaultValue>&quot;https://png.pngtree.com/png-clipart/20210129/ourmid/pngtree-blue-default-avatar-png-image_2813123.jpg&quot;</defaultValue>
    <label>Image</label>
    <type>Url</type>
</CustomField>