force-app/main/default/objects/Cricketer__c/fields/Specialization__c.field-meta.xml
<CustomField>
    <fullName>Specialization__c</fullName>
    <label>Specialization</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bowler</fullName>
            </value>
            <value>
                <fullName>All-rounder</fullName>
            </value>
            <value>
                <fullName>Batter</fullName>
            </value>
            <value>
                <fullName>Wicket-keeper</fullName>
            </value>
            <value>
                <fullName>Captain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>