force-app/main/default/objects/Cricketer__c/fields/Teams__c.field-meta.xml
<CustomField>
    <fullName>Teams__c</fullName>
    <label>Teams</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MI</fullName>
            </value>
            <value>
                <fullName>RCB</fullName>
            </value>
            <value>
                <fullName>CSK</fullName>
            </value>
            <value>
                <fullName>DC</fullName>
            </value>
            <value>
                <fullName>PBKS</fullName>
            </value>
            <value>
                <fullName>KKR</fullName>
            </value>
            <value>
                <fullName>GT</fullName>
            </value>
            <value>
                <fullName>SRH</fullName>
            </value>
            <value>
                <fullName>LSG</fullName>
            </value>
            <value>
                <fullName>RR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>