force-app/main/default/objects/Cricketer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Teams__c</columns>
    <columns>Price__c</columns>
    <columns>Specialization__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>